[package]
name = "axalloc"
version.workspace = true
edition.workspace = true
authors = ["Yuekai Jia <equation618@gmail.com>"]
description = "ArceOS global memory allocator"
license.workspace = true
homepage.workspace = true
repository = "https://github.com/arceos-org/arceos/tree/main/modules/axalloc"
documentation = "https://arceos-org.github.io/arceos/axalloc/index.html"

[features]
default = ["tlsf", "allocator/page-alloc-256m", "tracking"]
tlsf = ["allocator/tlsf"]
slab = ["allocator/slab"]
buddy = ["allocator/buddy"]
page-alloc-64g = [
    "allocator/page-alloc-64g",
] # Support up to 64G memory capacity
page-alloc-4g = ["allocator/page-alloc-4g"] # Support up to 4G memory capacity
tracking = ["dep:percpu", "dep:axbacktrace"]

[dependencies]
allocator = { workspace = true, features = ["bitmap"] }
axbacktrace = { workspace = true, optional = true }
axerrno = "0.1"
cfg-if = "1.0"
kspin = "0.1"
log = "=0.4.21"
memory_addr = "0.4"
percpu = { version = "0.2", optional = true }
