[package]
name = "axbacktrace"
version = "0.1.0"
edition.workspace = true
authors = ["Mivik <mivikq@gmail.com>"]
license.workspace = true
homepage.workspace = true

[features]
default = []
dwarf = [
    "dep:addr2line",
    "dep:gimli",
    "dep:object",
    "dep:stable_deref_trait",
    "dep:thiserror",
]

[dependencies]
addr2line = { version = "0.25.0", default-features = false, optional = true, features = [
    "rustc-demangle",
    "smallvec",
    "alloc",
] }
cfg-if = "1"
gimli = { version = "0.32.0", default-features = false, optional = true, features = [
    "read-core",
    "endian-reader",
] }
kspin = "0.1.0"
object = { version = "0.37.1", default-features = false, optional = true, features = [
    "elf",
    "alloc",
    "read_core",
] }
stable_deref_trait = { version = "1.2.0", default-features = false, optional = true, features = [
    "alloc",
] }
thiserror = { version = "2.0.12", default-features = false, optional = true }

axconfig.workspace = true
