[package]
name = "axbacktrace"
version = "0.1.0"
edition.workspace = true
authors = ["Mivik <mivikq@gmail.com>"]
license.workspace = true
homepage.workspace = true

[features]
default = []
dwarf = ["dep:addr2line", "dep:gimli", "dep:paste"]

[dependencies]
cfg-if = "1"

addr2line = { version = "0.25.0", default-features = false, optional = true, features = [
    "rustc-demangle",
    "smallvec",
    "alloc",
] }
gimli = { version = "0.32.0", default-features = false, optional = true, features = [
    "read-core",
    "endian-reader",
] }
paste = { version = "1", optional = true }

axconfig.workspace = true
axlog.workspace = true
